#cmake file for module UnitTest
#author:XuPing
#created:2019/5/16 16:19:20

#AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} UNITTEST)
SET(UNITTEST
	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/UnitTest.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/UnitTest.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/STLTest.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/STLTest.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/ByteEndianTest.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/ByteEndianTest.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/PoolTest.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/PoolTest.h"	
	"${CMAKE_CURRENT_SOURCE_DIR}/HeapTest.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/HeapTest.h"	
	"${CMAKE_CURRENT_SOURCE_DIR}/BoostTest.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/BoostTest.h"	
	"${CMAKE_CURRENT_SOURCE_DIR}/LanguageTest.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/LanguageTest.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/TemplateTest.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/TemplateTest.h"
		

)
IF(WIN32)
	INCLUDE_DIRECTORIES(
		${API_DIR}
		${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/DbgHelp.h
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/boost
		${THIRD_LIBRARIES_INCLUDE_DIR}/gperftools/src
		${THIRD_LIBRARIES_INCLUDE_DIR}/gperftools/src/windows
	)
ENDIF(WIN32)

IF(LINUX)
	INCLUDE_DIRECTORIES(
        ${API_DIR}
        ${PUBLIC_DIR}
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/boost
		${THIRD_LIBRARIES_INCLUDE_DIR}/gperftools/src
	)
ENDIF(LINUX)
MESSAGE(STATUS ${LOGIC_INTERFACE})
SOURCE_GROUP( Api	FILES ${API})
SOURCE_GROUP( Define FILES ${LOGIC_DEFINE})
SOURCE_GROUP( Public\\Tinyxml FILES ${TINYXML})
SOURCE_GROUP( Public\\2D FILES ${2D})
SOURCE_GROUP( Public\\time FILES ${COMMON_TIME})
SOURCE_GROUP( Public FILES ${PUBLIC})
SOURCE_GROUP( Interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP( \\ FILES ${UNITTEST})

IF(WIN32)
	SET(THIRD_LIB_DEBUG
		"${THIRD_LIBRARIES_DEBUG_DIR}/libtcmalloc_minimal.lib"
	)
	SET(THIRD_LIB_RELEASE
	)
ENDIF(WIN32)

IF(LINUX)
ENDIF(LINUX)

ADD_LIBRARY( UnitTest SHARED
	${PUBLIC}
	${API}
	${LOGIC_INTERFACE}
	${LOGIC_DEFINE}
	${TINYXML}
	${COMMON_TIME}
	${UNITTEST}
)

SET_PROPERTY(TARGET UnitTest PROPERTY FOLDER "Test")

ADD_DEPENDENCIES(UnitTest NetGrid)

TARGET_LINK_LIBRARIES( UnitTest
	${KERNEL_LIBD}
	${KERNEL_LIB}
	${THIRD_LIB_DEBUG}
)